<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2015 Mantas Varnagiris.
  ~
  ~ This program is free software; you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation; either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FlavourPickerActivity"
    tools:ignore="NestedWeights">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">


        <TextView
            android:id="@+id/flavourResult"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Flavours"
            android:padding="8dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/number7Button"
            style="@style/Button.Flat.Borderless.Calc"
            android:onClick="onButtonClicked"
            android:text="@string/calculator_7" />

        <Button
            android:id="@+id/number8Button"
            style="@style/Button.Flat.Borderless.Calc"
            android:onClick="onButtonClicked"
            android:text="@string/calculator_8" />

        <Button
            android:id="@+id/number9Button"
            style="@style/Button.Flat.Borderless.Calc"
            android:onClick="onButtonClicked"
            android:text="@string/calculator_9" />

        <Button
            android:id="@+id/divideButton"
            style="@style/Button.Flat.Borderless.Calc.Action"
            android:onClick="onPlusClicked"
            android:text="@string/calculator_plus" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/number4Button"
            style="@style/Button.Flat.Borderless.Calc"
            android:onClick="onButtonClicked"
            android:text="@string/calculator_4" />

        <Button
            android:id="@+id/number5Button"
            style="@style/Button.Flat.Borderless.Calc"
            android:onClick="onButtonClicked"
            android:text="@string/calculator_5" />

        <Button
            android:id="@+id/number6Button"
            style="@style/Button.Flat.Borderless.Calc"
            android:onClick="onButtonClicked"
            android:text="@string/calculator_6" />

        <Button
            android:id="@+id/multiplyButton"
            style="@style/Button.Flat.Borderless.Calc.Action"
            android:onClick="onMinusClicked"
            android:text="@string/calculator_minus" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/number1Button"
            style="@style/Button.Flat.Borderless.Calc"
            android:onClick="onButtonClicked"
            android:text="@string/calculator_1" />

        <Button
            android:id="@+id/number2Button"
            style="@style/Button.Flat.Borderless.Calc"
            android:onClick="onButtonClicked"
            android:text="@string/calculator_2" />

        <Button
            android:id="@+id/number3Button"
            style="@style/Button.Flat.Borderless.Calc"
            android:onClick="onButtonClicked"
            android:text="@string/calculator_3" />

        <Button
            android:id="@+id/subtractButton"
            style="@style/Button.Flat.Borderless.Calc.Action"
            android:onClick="onEqualClicked"
            android:text="@string/calculator_equals" />

    </LinearLayout>

</LinearLayout>